--- a/newproduct.html
+++ b/newproduct.html
@@ -99,8 +99,9 @@
           <!-- 上面row響應 下面col也要響應~~~ -->
           <div class="col col-lg-3 lh-lg aside">
             <h3 class="text-center text-md-start">Player</h3>
+            <!-- BS內建margin 很多推不到位 可能要設定0 用開發者看會有淡黃區域 -->
             <ul
-              class="list-unstyled d-flex flex-lg-column justify-content-around mx-5 my-3"
+              class="list-unstyled d-flex flex-lg-column justify-content-around mx-5 my-3 ms-0"
             >
               <li class="">
                 <a class="text-decoration-none d-block active" href="#"
