--- a/allstarListItem.html
+++ b/allstarListItem.html
@@ -102,7 +102,7 @@
               <div class="card-body">
                 <h2 class="fs-4 lh-xl fw-bold">Kobe bryant - BLACK MAMBA</h2>
                 <!-- gap => css grid-gap -->
-                <div class="d-lg-flex list-unstyled gap-7 fs-6 lh-lg mb-4">
+                <div class="d-md-flex list-unstyled gap-7 fs-6 lh-lg mb-4">
                   <ul class="list-unstyled">
                     <li>Born｜August 23, 1978</li>
                     <li>Listed height｜6 ft 6 in (1.98 m)</li>
@@ -139,7 +139,7 @@
           </div>
           <div class="col col-xl-4" style="z-index: 5">
             <div
-              class="card position-relative shadow sticky-top mb-5 text-center text-xl-start"
+              class="card position-relative shadow sticky-lg-top mb-5 text-center text-xl-start"
             >
               <img
                 data-num="001"
@@ -153,11 +153,11 @@
               ></div>
               <div class="card-body fs-6">
                 <ul class="list-unstyled fsRwd">
-                  <li>5× NBA champion</li>
+                  <li class="text-muted">5× NBA champion</li>
                   <li class="mb-3">2000–2002, 2009, 2010</li>
-                  <li>2× NBA Finals MVP</li>
+                  <li class="text-muted">2× NBA Finals MVP</li>
                   <li class="mb-3">2009, 2010</li>
-                  <li>NBA Most Valuable Player</li>
+                  <li class="text-muted">NBA Most Valuable Player</li>
                   <li class="mb-3">2008</li>
                 </ul>
               </div>
